--- a/YOLOv8_2/Models/Model_35_epoch/args.yaml
+++ b/YOLOv8_2/Models/Model_35_epoch/args.yaml
@@ -1,8 +1,7 @@
 task: detect
 mode: train
 model: yolov8l.yaml
-data: D:/OneDrive - Rose-Hulman Institute of Technology/Rose-Hulman/course/CSSE/CSSE463/final
-  project/git/Poker-Card-Recognition/YOLOv8_2/dataset/data.yaml
+data: /content/YOLOv8_2/dataset/data.yaml
 epochs: 35
 time: null
 patience: 0
@@ -11,11 +10,10 @@ imgsz: 640
 save: true
 save_period: -1
 cache: false
-device: cpu
+device: 0，1，2，3
 workers: 8
-project: D:/OneDrive - Rose-Hulman Institute of Technology/Rose-Hulman/course/CSSE/CSSE463/final
-  project/git/Poker-Card-Recognition/YOLOv8_2/Models
-name: Model_35_epoch
+project: /content/YOLOv8_2/Models
+name: Model_35_epoch2
 exist_ok: false
 pretrained: true
 optimizer: auto
@@ -104,5 +102,4 @@ auto_augment: randaugment
 erasing: 0.4
 cfg: null
 tracker: botsort.yaml
-save_dir: D:\OneDrive - Rose-Hulman Institute of Technology\Rose-Hulman\course\CSSE\CSSE463\final
-  project\git\Poker-Card-Recognition\YOLOv8_2\Models\Model_35_epoch
+save_dir: /content/YOLOv8_2/Models/Model_35_epoch2
